--- a/src/main/resources/assets/umu_backpack/lang/ja_jp.json
+++ b/src/main/resources/assets/umu_backpack/lang/ja_jp.json
@@ -10,8 +10,8 @@
 	"advancement.umu_backpack.adventure.backpack.description": "バックパックを装備する",
 	"advancement.umu_backpack.adventure.max_size_backpack.title": "整理整頓の達人",
 	"advancement.umu_backpack.adventure.max_size_backpack.description": "バックパックを最大まで拡張する",
-	"advancement.umu_backpack.adventure.tightly_backpack.title": "宝物でいっぱい",
-	"advancement.umu_backpack.adventure.tightly_backpack.description": "全てのインベントリをアイテムで満たす",
+	"advancement.umu_backpack.adventure.full_backpack.title": "宝物でいっぱい",
+	"advancement.umu_backpack.adventure.full_backpack.description": "全てのインベントリをアイテムで満たす",
 
 	"key.umu_backpack.backpack": "バックパックの開閉"
 }
