--- a/src/main/resources/assets/umu_backpack/lang/en_us.json
+++ b/src/main/resources/assets/umu_backpack/lang/en_us.json
@@ -10,8 +10,8 @@
 	"advancement.umu_backpack.adventure.backpack.description": "Equip a backpack",
 	"advancement.umu_backpack.adventure.max_size_backpack.title": "Cram Master",
 	"advancement.umu_backpack.adventure.max_size_backpack.description": "Cram your backpack to maximum",
-	"advancement.umu_backpack.adventure.tightly_backpack.title": "Full of treasures",
-	"advancement.umu_backpack.adventure.tightly_backpack.description": "Fill all inventory with items",
+	"advancement.umu_backpack.adventure.full_backpack.title": "Full of treasures",
+	"advancement.umu_backpack.adventure.full_backpack.description": "Fill all inventory with items",
 
 	"key.umu_backpack.backpack": "Open/Close Backpack"
 }
