--- a/src/main/resources/assets/umu_backpack/lang/en_us.json
+++ b/src/main/resources/assets/umu_backpack/lang/en_us.json
@@ -33,5 +33,6 @@
 	"config.enum.umu_backpack.back_protection_enchantment_rarity.0": "Common",
 	"config.enum.umu_backpack.back_protection_enchantment_rarity.1": "Uncommon",
 	"config.enum.umu_backpack.back_protection_enchantment_rarity.2": "Rare",
-	"config.enum.umu_backpack.back_protection_enchantment_rarity.3": "Very Rare"
+	"config.enum.umu_backpack.back_protection_enchantment_rarity.3": "Very Rare",
+	"modmenu.descriptionTranslation.umu_config": "A simple backpack mod. Small animals can also be carried in backpacks."
 }
